# scientific-programming-garci232

./: .breakpoints  1-WhatIsTheShell.txt  10 - Processes  11 - The Environment  12- A Gentle Introduction to vi  2-Navigation.txt  3-ExploringTheCommandLine.txt  4-ManipulatinfFilesandDirectories.txt  6-Redirection.txt  8-AdvancedKeyboardTricksOutput.txt  animate_diurnal_heat_wave.py  animation_report.html  calculate_pythagorean_triples.c  calculate_pythagorean_triples.f90  main.py  matrix_examples.py  project.py  pyproject.toml  replit.nix  triples_f90.x
computing_with_formulas/: add_two_numbers.py  calculate_gaussian_at_one_value.py  calculate_liter_mass.py  compare_life_expectancy_to_seconds.py  convert_length.py  print_hello_world.py
dictionaries_and_strings/: CONCEPTS.md  compare_list_and_dictionary.py  create_constants_dictionary.py  create_stars_dictionary.py  generate_animation_report.py  logarithmic_sum.py  make_hertzsprung_russell_diagram.py  plot_viscosities.py  read_and_plot_logarithmic_sum_output.py
final_exam/: Garcia_PHYS241FinalScript.py  annotate_plot,py  calculate_bivariate_statistics.py  calculate_lowest_eigenvectors.py  calculate_quadratic_fit.py  convert_units.py  fit_curve_array.py  module_test_(python_pair_5).py  module_test_(type).py  plot_data_with_fit.py  read_two_columns_text.py
functions_and_branching/: calculate_quadratic_roots.py  convert_celsius_temperature_to_fahrenheit.py
loops_and_lists/: CONCEPTS.md  calculate_vertical_projectile_with_nested_lists.py  generate_coordinate_grid.py  sum_integer_reciprocals_using_while.py  (+5 more)
(+10 files in other folders)
